# SSM_Transformer_Hybird_Context_Manager

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
ctx/: __init__.py  benchmark.py  compaction.py  hooks.py  index.py  mamba_summarizer.py  mcp_server.py  prompts.py  service.py  ssm_engine.py  store.py
research/: SSM_POSTMORTEM.md  advantage_surface.md  deep_research_report.md
scripts/: compact_demo.py  diagnose.py  digest_modes.py  drift_probe.py  fetch_model.py  hybrid_probe.py  hybrid_stage2.py  hybrid_stage3_link.py  knee_sweep.py  observe.py  observe_sweep.py  probe_state.py  revert_stream_test.py  run_m4.py  salience_select.py  setup_service.ps1  smoke_mamba.py  state_decode.py  stream_test.py  streaming_test.py  streaming_test2.py  stress_test.py  verify_engine.py  verify_mcp.py
tests/: test_benchmark.py  test_cc_hooks.py  test_compaction.py  test_index.py  test_packaging.py  test_prompts.py  test_readability_fixes.py  test_service.py  test_sharded_engine.py  test_ssm_engine.py  test_store.py  test_tool_polish.py  test_wiring.py
